// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`carousel Basic 3 Slide <bolt-carousel> Renders 1`] = `
<bolt-carousel class="is-ready">
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 1
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 2
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 3
        </div>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 3"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <button type="button"
            class="e-bolt-button
        e-bolt-button--medium
        e-bolt-button--border-radius-full
        e-bolt-button--secondary
        e-bolt-button--icon-only"
            aria-label="Previous"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon size="large"
                   name="chevron-left"
        >
        </bolt-icon>
      </span>
    </button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <button type="button"
            class="e-bolt-button
        e-bolt-button--medium
        e-bolt-button--border-radius-full
        e-bolt-button--secondary
        e-bolt-button--icon-only"
            aria-label="Next"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon size="large"
                   name="chevron-right"
        >
        </bolt-icon>
      </span>
    </button>
  </div>
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Nav Controls 1`] = `
<bolt-carousel class="is-ready">
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 1
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 2
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 3
        </div>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 3"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <button class="e-bolt-button e-bolt-button--border-radius-full e-bolt-button--secondary e-bolt-button--icon-only"
            aria-label="Previous"
            slot="previous-btn"
            tabindex="-1"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon name="chevron-left"
                   size="large"
        >
          <span class="c-bolt-icon c-bolt-icon--large c-bolt-icon--chevron-left c-bolt-icon--auto">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
              <use href="#chevron-left">
              </use>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <button class="e-bolt-button e-bolt-button--border-radius-full e-bolt-button--secondary e-bolt-button--icon-only"
            aria-label="Next"
            slot="next-btn"
            tabindex="-1"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon name="chevron-right"
                   size="large"
        >
          <span class="c-bolt-icon c-bolt-icon--large c-bolt-icon--chevron-right c-bolt-icon--auto">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
              <use href="#chevron-right">
              </use>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </button>
  </div>
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Outer Nav Controls 1`] = `
<bolt-carousel nav-button-position="outside"
               class="is-ready"
>
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 801px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 1
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
                           style="width: 801px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 2
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 801px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 3
        </div>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 3"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--outside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <button class="e-bolt-button e-bolt-button--border-radius-full e-bolt-button--secondary e-bolt-button--icon-only"
            aria-label="Previous"
            slot="previous-btn"
            tabindex="-1"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon name="chevron-left"
                   size="large"
        >
          <span class="c-bolt-icon c-bolt-icon--large c-bolt-icon--chevron-left c-bolt-icon--auto">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
              <use href="#chevron-left">
              </use>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--outside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <button class="e-bolt-button e-bolt-button--border-radius-full e-bolt-button--secondary e-bolt-button--icon-only"
            aria-label="Next"
            slot="next-btn"
            tabindex="-1"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon name="chevron-right"
                   size="large"
        >
          <span class="c-bolt-icon c-bolt-icon--large c-bolt-icon--chevron-right c-bolt-icon--auto">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
              <use href="#chevron-right">
              </use>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </button>
  </div>
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Variable (Auto) Slide Per View 1`] = `
<bolt-carousel slides-per-view="auto"
               class="is-ready"
>
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 380px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 1
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--next"
                           style="width: 380px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 2
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 380px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 3
        </div>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <button type="button"
            class="e-bolt-button
        e-bolt-button--medium
        e-bolt-button--border-radius-full
        e-bolt-button--secondary
        e-bolt-button--icon-only"
            aria-label="Previous"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon size="large"
                   name="chevron-left"
        >
          <span class="c-bolt-icon c-bolt-icon--large c-bolt-icon--chevron-left c-bolt-icon--auto">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
              <use href="#chevron-left">
              </use>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <button type="button"
            class="e-bolt-button
        e-bolt-button--medium
        e-bolt-button--border-radius-full
        e-bolt-button--secondary
        e-bolt-button--icon-only"
            aria-label="Next"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon size="large"
                   name="chevron-right"
        >
          <span class="c-bolt-icon c-bolt-icon--large c-bolt-icon--chevron-right c-bolt-icon--auto">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
              <use href="#chevron-right">
              </use>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </button>
  </div>
</bolt-carousel>
`;

exports[`carousel Basic 7 Slide <bolt-carousel> Renders 1`] = `
<bolt-carousel class="is-ready">
  <div class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
       style="cursor: grab;"
  >
    <div class="c-bolt-carousel__wrapper"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 1
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 2
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 3
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 4
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 5
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 6
        </div>
      </bolt-carousel-slide>
      <bolt-carousel-slide class="c-bolt-carousel__slide is-ready"
                           style="width: 790px; margin-right: 30px;"
      >
        <bolt-image src="/fixtures/1200x660.jpg"
                    srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                    sizes="auto"
                    ratio="1200/660"
                    alt="A Rock Climber"
                    no-lazy
                    style="background-color: hsl(233, 33%, 97%); width: 100%;"
        >
        </bolt-image>
        <div>
          Slide 7
        </div>
      </bolt-carousel-slide>
    </div>
    <div class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets">
      <span class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
            tabindex="0"
            role="button"
            aria-label="Go to slide 1"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 2"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 3"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 4"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 5"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 6"
      >
      </span>
      <span class="c-bolt-carousel__pagination__bullet"
            tabindex="0"
            role="button"
            aria-label="Go to slide 7"
      >
      </span>
    </div>
    <span class="c-bolt-carousel__notification"
          aria-live="assertive"
          aria-atomic="true"
    >
    </span>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
       tabindex="0"
       role="button"
       aria-label="Previous slide"
       aria-disabled="true"
  >
    <button type="button"
            class="e-bolt-button
        e-bolt-button--medium
        e-bolt-button--border-radius-full
        e-bolt-button--secondary
        e-bolt-button--icon-only"
            aria-label="Previous"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon size="large"
                   name="chevron-left"
        >
          <span class="c-bolt-icon c-bolt-icon--large c-bolt-icon--chevron-left c-bolt-icon--auto">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
              <use href="#chevron-left">
              </use>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </button>
  </div>
  <div class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
       tabindex="0"
       role="button"
       aria-label="Next slide"
       aria-disabled="false"
  >
    <button type="button"
            class="e-bolt-button
        e-bolt-button--medium
        e-bolt-button--border-radius-full
        e-bolt-button--secondary
        e-bolt-button--icon-only"
            aria-label="Next"
    >
      <span class="e-bolt-button__icon-center">
        <bolt-icon size="large"
                   name="chevron-right"
        >
          <span class="c-bolt-icon c-bolt-icon--large c-bolt-icon--chevron-right c-bolt-icon--auto">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
              <use href="#chevron-right">
              </use>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </button>
  </div>
</bolt-carousel>
`;
